# skw-yolo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
detection/: augs.py  dataset.py  helpers.py  loss.py  metrics.py  model.py  train.py
seg2/: data.py  loss.py  metrics.py
segmentation/: augs.py  dataset.py  loss.py  metrics.py
segmentation_v2/: augs.py  data.py  loss.py  metrics.py
shared/: augs.py  data.py  helpers.py
